backend: refactor to use lens and add more logic to playCard in Game

--- a/backend/hokm-api/hokm-api.cabal
+++ b/backend/hokm-api/hokm-api.cabal
@@ -40,6 +40,7 @@ library
       Hokm.Api.Effect.Database.User
       Hokm.Api.Effect.GameState
       Hokm.Api.Effect.Hub
+      Hokm.Api.Effect.Lobby
       Hokm.Api.Effect.Random
       Hokm.Api.Effect.Scrypt
       Hokm.Api.Network.Anatomy
@@ -219,6 +220,96 @@ executable hokm
       base
     , hokm-api
     , hokm-prelude
+  mixins:
+      base hiding (Prelude)
+  default-language: Haskell2010
+
+test-suite hokm-api-test
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  other-modules:
+      Test.Hokm.Api.Data.Game
+      Paths_hokm_api
+  autogen-modules:
+      Paths_hokm_api
+  hs-source-dirs:
+      test
+  default-extensions:
+      ApplicativeDo
+      Arrows
+      BangPatterns
+      BlockArguments
+      ConstraintKinds
+      DataKinds
+      DefaultSignatures
+      DeriveAnyClass
+      DeriveFoldable
+      DeriveFunctor
+      DeriveGeneric
+      DeriveLift
+      DeriveTraversable
+      DerivingStrategies
+      DerivingVia
+      DuplicateRecordFields
+      EmptyCase
+      ExistentialQuantification
+      FlexibleContexts
+      FlexibleInstances
+      FunctionalDependencies
+      GADTs
+      GeneralizedNewtypeDeriving
+      InstanceSigs
+      KindSignatures
+      LambdaCase
+      MultiParamTypeClasses
+      MultiWayIf
+      NamedFieldPuns
+      OverloadedLabels
+      OverloadedStrings
+      PatternSynonyms
+      PolyKinds
+      RankNTypes
+      RecordWildCards
+      ScopedTypeVariables
+      StandaloneDeriving
+      StrictData
+      TemplateHaskell
+      TupleSections
+      TypeApplications
+      TypeFamilies
+      TypeFamilyDependencies
+      TypeOperators
+      ViewPatterns
+  ghc-options: -Weverything -Wno-missing-exported-signatures -Wno-missing-import-lists -Wno-missing-safe-haskell-mode -Wno-missing-export-lists -Wno-implicit-prelude -Wno-unused-imports -Wno-prepositive-qualified-module -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe -Wno-missing-local-signatures -Wno-monomorphism-restriction -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base
+    , binary
+    , containers
+    , directory
+    , filepath
+    , free
+    , hedgehog
+    , hokm-api
+    , hokm-prelude
+    , http-client
+    , http-types
+    , lifted-async
+    , lifted-base
+    , managed
+    , monad-control
+    , port-utils
+    , postgres-options
+    , relude
+    , resource-pool
+    , servant-client
+    , servant-client-core
+    , tasty
+    , tasty-hedgehog
+    , tmp-postgres
+    , transformers-base
+    , typed-process
+    , uuid
+    , validation-selective
   mixins:
       base hiding (Prelude)
   default-language: Haskell2010
