--- a/backend/hokm-api/hokm-api.cabal
+++ b/backend/hokm-api/hokm-api.cabal
@@ -40,6 +40,7 @@ library
       Hokm.Api.Effect.Database.User
       Hokm.Api.Effect.GamesState
       Hokm.Api.Effect.Hub
+      Hokm.Api.Effect.Logger
       Hokm.Api.Effect.Random
       Hokm.Api.Effect.Scrypt
       Hokm.Api.Effect.WebSocket
@@ -61,6 +62,8 @@ library
       Hokm.Api.Network.Server.Socket
       Hokm.Api.Network.Server.Socket.Game
       Hokm.Api.Network.Wai.Application
+      Hokm.Api.Network.Wai.Cors
+      Hokm.Api.Network.Wai.Log
       Hokm.Api.Servant.Authentication
       Hokm.Api.Servant.Response
   other-modules:
@@ -220,6 +223,7 @@ executable hokm
       base
     , hokm-api
     , hokm-prelude
+    , postgresql-simple
   mixins:
       base hiding (Prelude)
   default-language: Haskell2010
