--- a/soltan.cabal
+++ b/soltan.cabal
@@ -31,6 +31,7 @@ common common-options
                      , singletons-th
                      , constraints
                      , MonadRandom
+                     , uuid
 
   ghc-options:         -Wall
                        -Wincomplete-uni-patterns
@@ -92,12 +93,38 @@ library
                        Soltan.Effect.Hub
                        Soltan.Effect.Lobby
                        Soltan.Effect.Shuffle
+                       Soltan.Effect.Id
                        Soltan.App.Env
                        Soltan.App.Monad
                        Soltan.App.Client
                        Soltan.App.Lobby
+                       Soltan.App.Error
+                       Soltan.Server
+                       Soltan.Server.Prelude
+                       Soltan.Server.Api
                        Soltan.Server.Socket
+                       Soltan.Server.Types
+                       Soltan.Server.Lobby
+                       Soltan.Server.Game
   build-depends:       co-log
+                     , servant
+                     , servant-server
+                     , http-types
+                     , case-insensitive
+                     , bcrypt
+                     , mtl
+                     , postgresql-simple
+                     , resource-pool
+                     , warp 
+                     , postgresql-simple-named
+                     , servant-websockets
+
+executable soltan
+  import:              common-options
+  hs-source-dirs:      app
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       soltan
 
 test-suite soltan-test
   import:              common-options
