--- a/soltan.cabal
+++ b/soltan.cabal
@@ -143,6 +143,7 @@ test-suite soltan-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   other-modules:       Hokm.Hedgehog.Gen.Game
+                       Hokm.Utils
                        Test.Hokm.ActionSpec
                        Test.Hokm.ActionValidationSpec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
