--- a/soltan.cabal
+++ b/soltan.cabal
@@ -118,7 +118,9 @@ library
                        Soltan.Effects.Lobby
                        Soltan.Effects.Concurrent
                        Soltan.Effects.Clients
+                       Soltan.Effects.Random
                        Soltan.Hokm
+                       Soltan.Hokm.Hokm
                        Soltan.Hokm.Types
                        Soltan.Hokm.ActionValidation
                        Soltan.Hokm.Action
@@ -146,6 +148,7 @@ test-suite soltan-test
                        Hokm.Utils
                        Test.Hokm.ActionSpec
                        Test.Hokm.ActionValidationSpec
+                       Test.Hokm.UtilsSpec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       soltan
                      , hedgehog
