--- a/soltan.cabal
+++ b/soltan.cabal
@@ -121,6 +121,7 @@ library
                        Soltan.Effects.Random
                        Soltan.Hokm
                        Soltan.Hokm.Hokm
+                       Soltan.Hokm.Scoring
                        Soltan.Hokm.Types
                        Soltan.Hokm.ActionValidation
                        Soltan.Hokm.Action
@@ -148,7 +149,9 @@ test-suite soltan-test
                        Hokm.Utils
                        Test.Hokm.ActionSpec
                        Test.Hokm.ActionValidationSpec
+                       Test.Hokm.HokmSpec
                        Test.Hokm.UtilsSpec
+                       Test.Socket.MsgSpec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       soltan
                      , hedgehog
