some fixes for users joining and leaving

--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -94,7 +94,7 @@ steps:
       # Whether or not to break single constructor data types before `=` sign
       #
       # Default: true
-      break_single_constructors: true
+      break_single_constructors: false
  
       # Whether or not to curry constraints on function.
       #
